<resources>
    <string name="app_name">Calculator</string>
    <string name="b0">0</string>
    <string name="b00">00</string>
    <string name="b1">1</string>
    <string name="b2">2</string>
    <string name="b3">3</string>
    <string name="b4">4</string>
    <string name="b5">5</string>
    <string name="b6">6</string>
    <string name="b7">7</string>
    <string name="b8">8</string>
    <string name="b9">9</string>
    <string name="add">+</string>
    <string name="multi">*</string>
    <string name="div">/</string>
    <string name="sub">-</string>
    <string name="mod">%</string>
    <string name="AC">AC</string>
    <string name="del">× </string>
    <string name="dot">.</string>
    <string name="eq">=</string>
    <string name="Sin">Sin</string>
    <string name="Cos">Cos</string>
    <string name="Tan">Tan</string>
    <string name="log">Log</string>
    <string name="ln">Ln</string>
    <string name="ob">(</string>
    <string name="cb">)</string>
    <string name="fact">!</string>
    <string name="root">√</string>
    <string name="ab">x^y</string>
    <string name="sw">≡</string>
    <string name="e">exp</string>
    <string name="xi">1/x</string>
    <string name="pi">π</string>
</resources>