<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".MainActivity2">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/opt"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:gravity="bottom|end"
            android:textColor="#FAFAF6F6"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_columnSpan="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/button26"
            android:layout_width="70dp"
            android:layout_height="101dp"
            android:background="@drawable/switch_style"
            android:onClick="clickswitch"
            android:text="@string/sw"
            android:textColor="@android:color/background_light"
            android:textSize="36sp"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_rowSpan="2" />

        <Button
            android:id="@+id/button27"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="clickclear"
            android:text="@string/AC"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/button28"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_style"
            android:onClick="clickdel"
            android:text="@string/del"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button29"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickfact"
            android:text="@string/fact"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/button30"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickpie"
            android:text="@string/pi"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/button31"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickinverse"
            android:text="@string/xi"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button32"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickpow"
            android:text="@string/ab"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/button33"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickroot"
            android:text="@string/root"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/button34"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclicke"
            android:text="@string/e"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/button35"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclicklog"
            android:text="@string/log"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/button36"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickln"
            android:text="@string/ln"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/button37"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclicksin"
            android:text="@string/Sin"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/button38"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click1"
            android:text="@string/b1"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/button39"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click2"
            android:text="@string/b2"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/button40"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click3"
            android:text="@string/b3"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/button41"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickcos"
            android:text="@string/Cos"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/button42"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click4"
            android:text="@string/b4"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/button43"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click5"
            android:text="@string/b5"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/button44"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click6"
            android:text="@string/b6"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/button45"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclicktan"
            android:text="@string/Tan"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="6" />

        <Button
            android:id="@+id/button46"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click7"
            android:text="@string/b7"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_row="6" />

        <Button
            android:id="@+id/button47"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click8"
            android:text="@string/b8"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button48"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click9"
            android:text="@string/b9"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="6" />

        <Button
            android:id="@+id/button49"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/operator"
            android:onClick="onclickeq"
            android:text="@string/eq"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_column="3"
            app:layout_row="7" />

        <Button
            android:id="@+id/button50"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="click0"
            android:text="@string/b0"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_row="7" />

        <Button
            android:id="@+id/button51"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@drawable/number"
            android:onClick="clickdot"
            android:text="@string/dot"
            android:textSize="24sp"
            app:layout_column="2"
            app:layout_row="7" />
    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>